<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.gluu</groupId>
	<artifactId>oxcore</artifactId>
	<packaging>pom</packaging>
	<version>4.4.0-SNAPSHOT</version>
	<name>oxCore</name>
	<url>https://www.gluu.org</url>

	<prerequisites>
		<maven>${maven.min-version}</maven>
	</prerequisites>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<maven.min-version>3.0.3</maven.min-version>
	</properties>

	<scm>
		<url>https://github.com/GluuFederation/oxCore</url>
		<connection>scm:git:git://github.com/GluuFederation/oxCore.git</connection>
		<developerConnection>scm:git:git@github.com:GluuFederation/oxCore.git</developerConnection>
	</scm>

	<modules>
		<module>oxUtil</module>
		<module>oxModel</module>
		<module>core-cache</module>
		<module>core-document-store</module>
		<module>core-standalone</module>
		<module>oxSaml</module>
		<module>oxJsfUtil</module>
		<module>core-java-ext</module>
		<module>core-cdi</module>
		<module>core-timer-weld</module>
		<module>security-extension-cdi</module>
		<module>exception-extension-cdi</module>
		<module>core-script</module>
		<module>oxService</module>
		<module>server</module>
		<module>oxRadius</module>
		<module>demo-cdi</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.gluu</groupId>
				<artifactId>gluu-core-bom</artifactId>
				<version>4.4.0-SNAPSHOT</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>jakarta.xml.bind</groupId>
				<artifactId>jakarta.xml.bind-api</artifactId>
				<version>2.3.3</version>
			</dependency>
			<dependency>
				<groupId>javax.annotation</groupId>
				<artifactId>javax.annotation-api</artifactId>
				<version>1.3.2</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.3.2</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.4.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.3.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.4</version>
					<configuration>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>2.1.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.7.2</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>findbugs-maven-plugin</artifactId>
					<version>3.0.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.2.2</version>
					<configuration>
						<tagBase>
							file:///c:/sourcecontrol/gluu/openxdi_release_trunk/oxCore/tags
						</tagBase>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.1.2</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>3.0.0</version>
					<configuration>
						<configLocation>checkstyle.xml</configLocation>
						<encoding>UTF-8</encoding>
						<consoleOutput>true</consoleOutput>
						<failsOnError>true</failsOnError>
						<linkXRef>false</linkXRef>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<configuration>
						<failOnError>false</failOnError>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.0.0</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>checkstyle</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>

    <repositories>
        <repository>
            <id>mavencentral</id>
            <name>maven central</name>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
        <repository>
            <id>bouncycastle</id>
            <name>Bouncy Castle</name>
            <url>https://repo2.maven.org/maven2/org/bouncycastle</url>
        </repository>
        <repository>
            <id>gluu</id>
            <name>Gluu project repository</name>
            <url>https://maven.gluu.org/maven</url>
        </repository>
    </repositories>
</project>